force-app/main/default/objects/Account/fields/Average_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Opportunity_Amount__c</fullName>
    <label>Average Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>