force-app/main/default/objects/Account/fields/Average_Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Resolution_Time__c</fullName>
    <label>Average Resolution Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>