force-app/main/default/objects/Account/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <label>Case Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>