force-app/main/default/objects/Account/fields/Closed_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunity__c</fullName>
    <label>Closed Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>