force-app/main/default/objects/Account/fields/Dead_Line__c.field-meta.xml
<CustomField>
    <fullName>Dead_Line__c</fullName>
    <label>Dead Line</label>
    <type>Date</type>
</CustomField>