force-app/main/default/objects/Account/fields/Open_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity__c</fullName>
    <label>Open Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>