force-app/main/default/objects/Account/fields/Open_Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>Open_Service_Requests__c</fullName>
    <label>Open Service Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>