force-app/main/default/objects/Account/fields/Top_Agent__c.field-meta.xml
<CustomField>
    <fullName>Top_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>