force-app/main/default/objects/Account/fields/Total_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Revenue__c</fullName>
    <label>Total Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>